<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".ui.Almacenaje.Almacenaje.Tab_02.Alm_Tab_02Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBlueHeader"
        android:orientation="horizontal"
        android:padding="3dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/textView47"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Ubi. origen:"
            android:textColor="@color/yellowColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUbiOrigen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="xx - yy - zz"
            android:textColor="@color/whiteColor"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBlueHeader"
        android:orientation="horizontal"
        android:paddingBottom="3dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textView71"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Ingrese pallets/UAS"
            android:textColor="@color/yellowColor"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/edtCodBarra"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="A20182400009" />

        <Button
            android:id="@+id/btnInsert"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:background="@drawable/appbar_add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <!-- <ListView
            android:id="@+id/lvItemPal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"></ListView>-->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rclItemPallet"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="0" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableLayout
                    android:id="@+id/tableSample"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="0">

                    <TableRow android:id="@+id/tableHeader">

                        <TextView
                            android:id="@+id/labelHeader1"
                            style="@style/TableHeader"
                            android:text="@string/label_header1" />

                        <TextView
                            android:id="@+id/labelHeader2"
                            style="@style/TableHeader"
                            android:text="@string/label_header2" />

                        <TextView
                            android:id="@+id/labelHeader3"
                            style="@style/TableHeader"
                            android:text="@string/label_header3" />

                        <TextView
                            android:id="@+id/labelHeader4"
                            style="@style/TableHeader"
                            android:text="@string/label_header4" />

                        <TextView
                            android:id="@+id/labelHeader5"
                            style="@style/TableHeader"
                            android:text="@string/label_header5" />

                        <TextView
                            android:id="@+id/labelHeader6"
                            style="@style/TableHeader"
                            android:text="@string/label_header6" />

                        <TextView
                            android:id="@+id/labelHeader7"
                            style="@style/TableHeader"
                            android:text="@string/label_header7" />

                        <TextView
                            android:id="@+id/labelHeader8"
                            style="@style/TableHeader"
                            android:text="@string/label_header8" />

                        <TextView
                            android:id="@+id/labelHeader9"
                            style="@style/TableHeader"
                            android:text="@string/label_header_Accion" />
                    </TableRow>
                </TableLayout>
            </HorizontalScrollView>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBlueHeader"
        android:orientation="horizontal"
        android:padding="3dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/textView74"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Total:"
            android:textColor="@color/yellowColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1"
            android:textColor="@color/whiteColor"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>